--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,6 +102,11 @@
                       <a href="#" panel-name="suite-ApplaudoTechnicalExam" class="show-methods passed suite-ApplaudoTechnicalExam"> (show)</a> <!-- show-methods passed suite-ApplaudoTechnicalExam -->
                     </span>
                     <div class="method-list-content passed suite-ApplaudoTechnicalExam">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.WebPage.FeatureTest.ShoppingCartTest" class="method navigator-link" hash-for-method="testAddItemToShoppingCart">testAddItemToShoppingCart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.BreakingBadAPI.EndpointTest.CharacterTest" class="method navigator-link" hash-for-method="testGetAllCharacters">testGetAllCharacters</a> <!-- method navigator-link -->
@@ -114,7 +119,17 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.WebPage.FeatureTest.ShoppingCartTest" class="method navigator-link" hash-for-method="testRemoveItemFromShoppingCart">testRemoveItemFromShoppingCart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.WebPage.FeatureTest.SearchBoxTest" class="method navigator-link" hash-for-method="testSearchBox">testSearchBox</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.WebPage.FeatureTest.FooterTest" class="method navigator-link" hash-for-method="validateFooterInformation">validateFooterInformation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ApplaudoTechnicalExam -->
@@ -129,6 +144,58 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-ApplaudoTechnicalExam" class="panel ApplaudoTechnicalExam">
+          <div class="suite-ApplaudoTechnicalExam-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.WebPage.FeatureTest.FooterTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateFooterInformation">
+                  </a> <!-- validateFooterInformation -->
+                  <span class="method-name">validateFooterInformation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-ApplaudoTechnicalExam-class-passed -->
+          <div class="suite-ApplaudoTechnicalExam-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.WebPage.FeatureTest.SearchBoxTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchBox">
+                  </a> <!-- testSearchBox -->
+                  <span class="method-name">testSearchBox</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-ApplaudoTechnicalExam-class-passed -->
+          <div class="suite-ApplaudoTechnicalExam-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.WebPage.FeatureTest.ShoppingCartTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testAddItemToShoppingCart">
+                  </a> <!-- testAddItemToShoppingCart -->
+                  <span class="method-name">testAddItemToShoppingCart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testRemoveItemFromShoppingCart">
+                  </a> <!-- testRemoveItemFromShoppingCart -->
+                  <span class="method-name">testRemoveItemFromShoppingCart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-ApplaudoTechnicalExam-class-passed -->
           <div class="suite-ApplaudoTechnicalExam-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -151,21 +218,6 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-ApplaudoTechnicalExam-class-passed -->
-          <div class="suite-ApplaudoTechnicalExam-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.WebPage.FeatureTest.SearchBoxTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testSearchBox">
-                  </a> <!-- testSearchBox -->
-                  <span class="method-name">testSearchBox</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-ApplaudoTechnicalExam-class-passed -->
         </div> <!-- panel ApplaudoTechnicalExam -->
         <div panel-name="test-xml-ApplaudoTechnicalExam" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -178,6 +230,8 @@
 &lt;suite parallel=&quot;tests&quot; name=&quot;ApplaudoTechnicalExam&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;WebPageTest&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;com.WebPage.FeatureTest.FooterTest&quot;/&gt;
+      &lt;class name=&quot;com.WebPage.FeatureTest.ShoppingCartTest&quot;/&gt;
       &lt;class name=&quot;com.WebPage.FeatureTest.SearchBoxTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- WebPageTest --&gt;
@@ -197,7 +251,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">WebPageTest (1 class)</span>
+                <span class="test-name">WebPageTest (3 classes)</span>
               </li>
               <li>
                 <span class="test-name">EndpointTest (1 class)</span>
@@ -226,24 +280,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSearchBox')
 data.setCell(0, 2, 'com.WebPage.FeatureTest.SearchBoxTest')
-data.setCell(0, 3, 12681);
+data.setCell(0, 3, 10704);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testGetAllCharacters')
-data.setCell(1, 2, 'com.BreakingBadAPI.EndpointTest.CharacterTest')
-data.setCell(1, 3, 7445);
+data.setCell(1, 1, 'testAddItemToShoppingCart')
+data.setCell(1, 2, 'com.WebPage.FeatureTest.ShoppingCartTest')
+data.setCell(1, 3, 9520);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testGetCharacterByName')
+data.setCell(2, 1, 'testGetAllCharacters')
 data.setCell(2, 2, 'com.BreakingBadAPI.EndpointTest.CharacterTest')
-data.setCell(2, 3, 1196);
+data.setCell(2, 3, 7954);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testGetCharacterByName')
+data.setCell(3, 2, 'com.BreakingBadAPI.EndpointTest.CharacterTest')
+data.setCell(3, 3, 1052);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'validateFooterInformation')
+data.setCell(4, 2, 'com.WebPage.FeatureTest.FooterTest')
+data.setCell(4, 3, 643);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testRemoveItemFromShoppingCart')
+data.setCell(5, 2, 'com.WebPage.FeatureTest.ShoppingCartTest')
+data.setCell(5, 3, 327);
 window.suiteTableData['ApplaudoTechnicalExam']= { tableData: data, tableDiv: 'times-div-ApplaudoTechnicalExam'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-ApplaudoTechnicalExam">
               </div> <!-- times-div-ApplaudoTechnicalExam -->
             </div> <!-- times-div -->
@@ -260,13 +326,61 @@ return data;
                 <span class="reporter-method-output">[ERROR:] Page confirmed there was no result found</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">validateFooterInformation</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[INFORMATION ON FOOTER:] Store information
+Selenium Framework, Research Triangle Park, North Carolina, USA
+Call us now: (347) 466-7432
+Email: support@seleniumframework.com
+
+</span>
+                <span class="reporter-method-output">[EXPECTED INFORMATION VALUES:] Store information
+Selenium Framework, Research Triangle Park, North Carolina, USA
+
+</span>
+                <span class="reporter-method-output">[COMPARISON RESULT:] true
+
+</span>
+                <span class="reporter-method-output">[EXPECTED INFORMATION VALUES:] Call us now: (347) 466-7432
+
+</span>
+                <span class="reporter-method-output">[COMPARISON RESULT:] true
+
+</span>
+                <span class="reporter-method-output">[EXPECTED INFORMATION VALUES:] Email: support@seleniumframework.com
+
+</span>
+                <span class="reporter-method-output">[COMPARISON RESULT:] true
+
+</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-ApplaudoTechnicalExam" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.WebPage.FeatureTest.SearchBoxTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">afterSuite</span>
+                <br/>
+                <span class="ignored-method-name">beforeSuite</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.WebPage.FeatureTest.ShoppingCartTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">afterSuite</span>
+                <br/>
+                <span class="ignored-method-name">beforeSuite</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-ApplaudoTechnicalExam" class="panel">
@@ -275,7 +389,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.WebPage.FeatureTest.SearchBoxTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.WebPage.FeatureTest.FooterTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
@@ -285,26 +399,47 @@ return data;
               <div class="chronological-class-name">com.BreakingBadAPI.EndpointTest.CharacterTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">testGetAllCharacters</span>
-                <span class="method-start">35 ms</span>
+                <span class="method-start">29 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetCharacterByName</span>
-                <span class="method-start">7488 ms</span>
+                <span class="method-start">7987 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.WebPage.FeatureTest.FooterTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">validateFooterInformation</span>
+                <span class="method-start">20608 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.WebPage.FeatureTest.ShoppingCartTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testAddItemToShoppingCart</span>
+                <span class="method-start">21252 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testRemoveItemFromShoppingCart</span>
+                <span class="method-start">30773 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.WebPage.FeatureTest.SearchBoxTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">10725 ms</span>
+                <span class="method-start">31102 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testSearchBox</span>
-                <span class="method-start">13994 ms</span>
+                <span class="method-start">32990 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.WebPage.FeatureTest.FooterTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">26676 ms</span>
+                <span class="method-start">43695 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
