--- a/test-output/old/ApplaudoTechnicalExam/methods.html
+++ b/test-output/old/ApplaudoTechnicalExam/methods.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ApplaudoTechnicalExam</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6aad6c">  <td>21/07/30 17:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBoxTest.testSearchBox()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">testSearchBox</td> 
-  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
-<tr bgcolor="cbb9b1">  <td>21/07/30 17:22:32</td>   <td>12684</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/07/30 17:22:16</td>   <td>-3269</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchBoxTest.beforeClass()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
-<tr bgcolor="cbb9b1">  <td>21/07/30 17:22:05</td>   <td>-13987</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>21/07/30 17:22:05</td>   <td>-13959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetAllCharacters()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@75329a49]">testGetAllCharacters</td> 
-  <td>TestNG-tests-2@421321311</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>21/07/30 17:22:13</td>   <td>-6506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetCharacterByName()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@75329a49]">testGetCharacterByName</td> 
-  <td>TestNG-tests-2@421321311</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/07/30 19:59:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBoxTest.testSearchBox()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@12d4bf7e]">testSearchBox</td> 
+  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="7fc37a">  <td>21/07/30 19:58:36</td>   <td>-32984</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@358ee631]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/07/30 19:58:56</td>   <td>-12382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.validateFooterInformation()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@358ee631]">validateFooterInformation</td> 
+  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="cfa8b7">  <td>21/07/30 19:59:07</td>   <td>-1887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchBoxTest.beforeClass()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@12d4bf7e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="c7b4de">  <td>21/07/30 19:58:57</td>   <td>-11738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTest.testAddItemToShoppingCart()[pri:0, instance:com.WebPage.FeatureTest.ShoppingCartTest@3901d134]">testAddItemToShoppingCart</td> 
+  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="7fc37a">  <td>21/07/30 19:59:20</td>   <td>10705</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@358ee631]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="c7b4de">  <td>21/07/30 19:59:07</td>   <td>-2217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTest.testRemoveItemFromShoppingCart()[pri:0, instance:com.WebPage.FeatureTest.ShoppingCartTest@3901d134]">testRemoveItemFromShoppingCart</td> 
+  <td>TestNG-tests-1@734349942</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>21/07/30 19:58:44</td>   <td>-25003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetCharacterByName()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@49c386c8]">testGetCharacterByName</td> 
+  <td>TestNG-tests-2@1860935396</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>21/07/30 19:58:36</td>   <td>-32961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetAllCharacters()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@49c386c8]">testGetAllCharacters</td> 
+  <td>TestNG-tests-2@1860935396</td>   <td></td> </tr>
 </table>
